@@ -498,9 +498,7 @@ PHP_METHOD(classObj, getMetaData)
     zval *zname;
     zval *zobj = getThis();
     php_class_object *php_class;
-    zval retval;
-    zval *args[1];
-    zval function_name;
+    zval *retval;
 
     PHP_MAPSCRIPT_ERROR_HANDLING(TRUE);
     if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "z",
@@ -513,10 +511,9 @@ PHP_METHOD(classObj, getMetaData)
     php_class = (php_class_object *) zend_object_store_get_object(zobj TSRMLS_CC);
     CHECK_OBJECT(mapscript_ce_hashtable, php_class->metadata, &php_class->class->metadata);
     
-    args[0] = zname; 
-    MAPSCRIPT_CALL_METHOD(php_class->metadata, "get", retval, 1, args);
+    MAPSCRIPT_CALL_METHOD_1(php_class->metadata, "get", retval, zname);
 
-    RETURN_STRING(Z_STRVAL(retval),1);
+    RETURN_STRING(Z_STRVAL_P(retval),1);
 }
 /* }}} */
 
@@ -527,9 +524,7 @@ PHP_METHOD(classObj, setMetaData)
     zval *zname, *zvalue;
     zval *zobj = getThis();
     php_class_object *php_class;
-    zval retval;
-    zval *args[2];
-    zval function_name;
+    zval *retval;
 
     PHP_MAPSCRIPT_ERROR_HANDLING(TRUE);
     if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "zz",
@@ -542,11 +537,9 @@ PHP_METHOD(classObj, setMetaData)
     php_class = (php_class_object *) zend_object_store_get_object(zobj TSRMLS_CC);
     CHECK_OBJECT(mapscript_ce_hashtable, php_class->metadata, &php_class->class->metadata);
     
-    args[0] = zname; 
-    args[1] = zvalue; 
-    MAPSCRIPT_CALL_METHOD(php_class->metadata, "set", retval, 2, args);
+    MAPSCRIPT_CALL_METHOD_2(php_class->metadata, "set", retval, zname, zvalue);
 
-    RETURN_LONG(Z_LVAL(retval));
+    RETURN_LONG(Z_LVAL_P(retval));
 }
 /* }}} */
 
@@ -557,9 +550,7 @@ PHP_METHOD(classObj, removeMetaData)
     zval *zname;
     zval *zobj = getThis();
     php_class_object *php_class;
-    zval retval;
-    zval *args[1];
-    zval function_name;
+    zval *retval;
 
     PHP_MAPSCRIPT_ERROR_HANDLING(TRUE);
     if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "z",
@@ -572,10 +563,9 @@ PHP_METHOD(classObj, removeMetaData)
     php_class = (php_class_object *) zend_object_store_get_object(zobj TSRMLS_CC);
     CHECK_OBJECT(mapscript_ce_hashtable, php_class->metadata, &php_class->class->metadata);
     
-    args[0] = zname; 
-    MAPSCRIPT_CALL_METHOD(php_class->metadata, "remove", retval, 1, args);
+    MAPSCRIPT_CALL_METHOD_1(php_class->metadata, "remove", retval, zname);
 
-    RETURN_LONG(Z_LVAL(retval));
+    RETURN_LONG(Z_LVAL_P(retval));
 }
 /* }}} */
 
